objects/Channel_Market_Coverage__c.object
<CustomObject>
    <description>R5 - Custom Object to define Channel Market Coverage</description>
    <fields>
        <fullName>ABB_Business_Potential__c</fullName>
        <description>R5-currency field to capture ABB Business Potential value</description>
        <inlineHelpText>Give an estimate on ABB business potential. Will be visible on pre-qualification summary</inlineHelpText>
        <label>ABB Business Potential</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>R5 - Master Detail Relationship to Account Standard Object</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Channel_Market_Coverages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Additional_Information_for_abb_com__c</fullName>
        <label>Additional Information for abb.com</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_info_to_be_published_in_web__c</fullName>
        <description>R7A</description>
        <inlineHelpText>Additional Information to be published in the web</inlineHelpText>
        <label>Additional info to be published in web</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applications_focused__c</fullName>
        <description>R7A</description>
        <globalPicklist>ApplicationClass</globalPicklist>
        <inlineHelpText>Pick all applications the partner has sales focus with references or special competence to support</inlineHelpText>
        <label>Application Focus</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Authorized_AVP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R7</description>
        <label>Authorized AVP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Authorized_Strategic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authorized Strategic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BU_Count__c</fullName>
        <label>BU Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BU_Covered__c</fullName>
        <description>R5 - Displays the BU copied from the BU linked to the Product in Channel Market Coverage Product Lines by concatenating it.</description>
        <inlineHelpText>List of BUs covered in the scope. Autofilled based on &quot;Channel Partner Product Mix&quot;</inlineHelpText>
        <label>BUs Covered</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Co_operation_since__c</fullName>
        <description>R7A - Channel Authorization 3SN Migration</description>
        <label>Co-operation since</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Base__c</fullName>
        <description>R5 - Customer Base</description>
        <inlineHelpText>Pick customer types actively served. Do not pick if served only reactively.</inlineHelpText>
        <label>Customer Base</label>
        <picklist>
            <picklistValues>
                <fullName>End users</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEMs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPCs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System integrators</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel builders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributors</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>R5 Division</description>
        <inlineHelpText>Pick division(s) focused in this market scope (and connected business plan/review)</inlineHelpText>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>EP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZC</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Exisiting_Supplies_for__c</fullName>
        <description>R5 - Existing suppliers for products ABB has offering</description>
        <label>Existing suppliers products ABB offering</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Existing_ABB_offering_Flag__c</fullName>
        <description>R5 - Flag is displayed when Existing ABB offering is not filled.</description>
        <formula>IF(ISBLANK( Existing_ABB_offering__c ),IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_ABB_offering__c</fullName>
        <description>R5-Text field to capture Existing suppliers/ partners with existing ABB offering  value</description>
        <inlineHelpText>List the ABB products/services offered by the channel, also including the ABB offering not covered in this market scope</inlineHelpText>
        <label>Existing ABB offering</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_User__c</fullName>
        <description>Created as part of R8 Channel Partner management</description>
        <formula>Account__r.External_User__c</formula>
        <label>External User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Focussed_Industry1_Backup2__c</fullName>
        <label>Focussed Industry1 Backup2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Focussed_Industry1_Backup__c</fullName>
        <description>Backup field to save existing value. STS R3.0</description>
        <inlineHelpText>Backup field to save existing value. STS R3.0</inlineHelpText>
        <label>Focussed Industry1 Backup</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Focussed_Industry1__c</fullName>
        <inlineHelpText>Pick all the industries currently served and targeted in the upcoming 3 years. Pick only industries with sales focus, not the ones that are served reactively.</inlineHelpText>
        <label>Focussed Industry</label>
        <picklist>
            <picklistValues>
                <fullName>BLD.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.9.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.9.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.9.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.1.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.1.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.11.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.11.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.14.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.14.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.17.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.17.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.18.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.18.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.2.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.2.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.3</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Link_Name_in_web__c</fullName>
        <description>R7A - Channel Authorizations 3SN Migration</description>
        <label>Link name in web</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>R7A - Channel Authorization Migration</description>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PG_Covered__c</fullName>
        <description>R5 - Displays the PG copied from PG linked to the Product in Channel Market Coverage Product Lines by concatenating it.</description>
        <inlineHelpText>List of PGs covered in the scope. Autofilled based on &quot;Channel Partner Product Mix&quot;</inlineHelpText>
        <label>PGs Covered</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partners_with_complementary_products__c</fullName>
        <description>R5-Text field to capture the Existing suppliers/ partners with complementary products value</description>
        <label>Partners with complementary products</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partners_with_existing_ABB_offering__c</fullName>
        <description>R5-Text field to capture Existing suppliers/ partners with existing ABB offering  value</description>
        <label>Partners with existing ABB offering</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Address_Country__c</fullName>
        <description>R5 - Copies Primary Address Country from Account .</description>
        <formula>TEXT( Account__r.Primary_Address_Country__c )</formula>
        <label>Primary Address Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Channel_Class__c</fullName>
        <description>R5-Picklist contains Primary Channel Class values</description>
        <inlineHelpText>Select the primary channel class for this market scope</inlineHelpText>
        <label>Channel Class</label>
        <picklist>
            <picklistValues>
                <fullName>Engineering, Procurement and Construction (EPC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor (DIS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installer (INST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Original Equipment Manufacturer (OEM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel Builder (PBL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Provider (SPRO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Integrator (SYIN)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Distributor (TDIS)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Line1__c</fullName>
        <description>R5 - Long Text Area field to capture Product Line value</description>
        <inlineHelpText>List of PLs covered in the scope. Autofilled based on &quot;Channel Partner Product Mix&quot;</inlineHelpText>
        <label>Product Lines</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Region_to_operate__c</fullName>
        <description>R7A - Channel Authorizations 3SN Migration</description>
        <inlineHelpText>The geographical region where the partner has business focus with ABB offering</inlineHelpText>
        <label>Region to operate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Status_Quatnifiaction__c</fullName>
        <formula>IF(ISPICKVAL( Relationship_Status__c , &quot;Channel&quot;) , 0,IF(ISPICKVAL( Relationship_Status__c , &quot;Partner&quot;) , 1,3))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship Status Quantification</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Relationship_Status__c</fullName>
        <description>R5-Picklist hold the Relationship Status  values</description>
        <inlineHelpText>&quot;Partner&quot; - if active business plan;  &quot;Strategic/Key&quot; - if locally identified as such; &quot;ABB AVP&quot; - if valid authorization; &quot;Channel&quot; - otherwise</inlineHelpText>
        <label>Relationship Status</label>
        <picklist>
            <picklistValues>
                <fullName>Channel</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic / Key Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABB authorized value provider</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Channel_Class_2__c</fullName>
        <description>R5 - Secondary Channel Class</description>
        <inlineHelpText>Select additional channel class(es). Affects visibility on ABB.com after authorization</inlineHelpText>
        <label>Secondary Channel Class</label>
        <picklist>
            <picklistValues>
                <fullName>EngineeringProcurement&amp;Construction(EPC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor (DIS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installer (INST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Original Equipment Manufacturer (OEM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel builder (PBL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Provider (SPRO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System integrator (SYIN)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical distributor (TDIS)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Suppliers_complementary_products_Flag__c</fullName>
        <description>R5 - Flag is displayed when Suppliers with complementary products is not filled</description>
        <formula>IF(ISBLANK( Suppliers_with_complementary_products__c), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suppliers_potential_ABB_offering_Flag__c</fullName>
        <description>R5 - Flag is displayed when Suppliers with potential ABB offering is not filled.</description>
        <formula>IF(ISBLANK( Suppliers_with_possible_ABB_offering__c ),IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suppliers_with_complementary_products__c</fullName>
        <description>R5-Text field to capture the Existing suppliers/ partners with complementary products value</description>
        <inlineHelpText>..where ABB could potentially complement and create synergies - relevant to this market scop</inlineHelpText>
        <label>Complementary suppliers and offerings</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Suppliers_with_possible_ABB_offering__c</fullName>
        <description>R5 - Existing suppliers for products ABB has offering</description>
        <inlineHelpText>..where ABB could potentially supply - relevant to this market scope</inlineHelpText>
        <label>Competing suppliers and their offerings</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Targeted_AVP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R5-Checkbox for Targeted AVP</description>
        <inlineHelpText>Mark if the partner is planned to become an AVP in the upcoming 0-2 years. Affects the templates and functionalities.</inlineHelpText>
        <label>Targeted AVP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Targeted_Key_Strategic__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R5-Checkbox for Targeted Key Strategic</description>
        <inlineHelpText>Mark if the partner is targeting to become key or strategic partner in the upcoming 0-2 years. Affects the templates and functionalities.</inlineHelpText>
        <label>Targeted Strategic / Key Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <description>R7A - Channel Authorization 3SN Migration</description>
        <label>Tier</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>URL_to_find_document__c</fullName>
        <description>R7A - Channel Authorizations 3SN Migration</description>
        <label>URL to find document</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Product_Check__c</fullName>
        <description>R5 - Duplicate check in Channel Market Coverage and Account.</description>
        <label>Unique Product Check</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>isBackupMultiselectPicklist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox with flag is needed to query Multiselected Picklist field (Long Text Area).</description>
        <inlineHelpText>Checkbox with flag is needed to query Multiselected Picklist field (Long Text Area).</inlineHelpText>
        <label>isBackupMultiselectPicklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_Channel_Partner_Market_Scopes__c</fullName>
        <description>SFDC - 4167 - Field type ‘Power of One’ for reporting purpose only</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>It shows if at least 1 record on this object was created or not (1 means that it was)</inlineHelpText>
        <label># of Channel Partner Market Scopes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Channel Partner Market Scope</label>
    <nameField>
        <label>Market Scope Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Channel Partner Market Scope</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>No_Channel_Market_Coverage_On_Bulk_Acc</fullName>
        <active>true</active>
        <description>Related Account cannot be Bulk Business.</description>
        <errorConditionFormula>AND(
    NOT($User.AccountMerge_Override__c),
 NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c),NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c),
    CONTAINS(LOWER(Account__r.Name), &apos;bulk business&apos;)
)</errorConditionFormula>
        <errorMessage>Related Account cannot be Bulk Business.</errorMessage>
    </validationRules>
</CustomObject>